Refined the styling, made QOL improvements.

--- a/accessible/index.html
+++ b/accessible/index.html
@@ -8,6 +8,6 @@
     <script type="module" src="./script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Public Space on the Web</h1>
 </body>
 </html>
